--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Antonio Barrera</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello world!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Miami, Florida but I have been living in Oregon for the past 15 years.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy to play guitar, play videogames, skateboard, and rock climb</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is one that can pay for my lifestyle.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I want to live anywhere that has fun outdoor activities.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be able to work in a stable industry.</p>
     </section>
 
     <footer id="footer">
